# menuchat

./: .env.example  .gitignore  DEPLOYMENT_README.md  README.md  docker-compose.yml  render.yaml
backend/: Dockerfile  README.md  entrypoint.sh  pyproject.toml  ruff.toml
backend/accounts/: admin.py  authentication.py  managers.py  models.py  notifications.py  serializers.py  services.py  social_auth.py  tasks.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0003_backfill_onboarding_completed.py
backend/accounts/tests/: factories.py  test_auth_tokens.py  test_authentication.py  test_views.py
backend/ai/: base_agent.py
backend/config/: asgi.py  exception_handler.py  logging_formatter.py  settings.py  urls.py  views.py
backend/customers/: admin.py  authentication.py  managers.py  models.py  serializers.py  social_auth.py  urls.py  views.py
backend/customers/migrations/: 0001_initial.py  (+1 more)
backend/integrations/: admin.py  encryption.py  models.py  monitoring.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/notifications/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/orders/: broadcast.py  cart_service.py  consumers.py  middleware.py  models.py  notifications.py  queue_service.py  recommendation_service.py  routing.py  serializers.py  services.py  tab_broadcasts.py  tab_payment_service.py  tab_service.py  tab_views.py  tasks.py  urls.py  views.py
backend/restaurants/: models.py  notifications.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py  views_menu_upload.py
(+328 files in other folders)
